# sphconv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  check.py  config.yaml  kitti_reader.py  net.py  prof.sh  range_voxel.yaml  requirements.txt  setup.py  test.py  test_utils.py  voxel.yaml
cuda/: conv.py  conv_cuda.cpp  conv_cuda_kernel.cu  setup.py
cuda/setup_helpers/: env.py
include/: debug_utils.h  default_conv.cu.h  default_epilogue.cu.h  default_mma.cu.h  feature.h  indice.cu.h  iterator.cu.h  point2voxel.h  rule_conv.h  rule_conv_kernel.cu.h  rules.h  tensor.h  threadblock_swizzle.h
include/sphconv/: debug_utils.h  default_conv.cu.h  default_epilogue.cu.h  default_mma.cu.h  iterator.cu.h  rule_conv.h  rule_conv_kernel.cu.h  rules.h  threadblock_swizzle.h
python/: DepthImage.py  conv.py  conv_baseline.py
setup_helpers/: cuda.py  cudnn.py
sphconv/: CMakeLists.txt  Makefile  __init__.py  all.cpp  bug.py  conv.py  conv_cuda.cpp  conv_cuda.h  conv_cuda_kernel.cu  data.py  datagen.py  debug_utils.h  functional.py  jit.py  kitti_reader.py  modules.py  prefix_sum.cu  rangevoxel.py  setup.py  tensor.py  test_utils.py  utils.py  vfe.py
sphconv/include/: conv.h  feature.h  indice_conv.cu.h  indice_conv.h  to_dense.cu.h  to_dense.h
sphconv/include/sphconv/: debug_utils.h  indice.h  indice_conv.cu.h  reorder.cu.h  sphconv.h  timer.h
sphconv/include/sphconv/indice_conv/: array.cu.h  conv.h  coord.cu.h  coords.cu.h  device.cu.h  iterator.cu.h  kernel.cu.h  layout.cu.h  mma.cu.h  tensor.cu.h  threadblock.cu.h  threadblock_swizzle.cu.h  threadmap.cu.h
sphconv/src/: all.cpp  conv_cuda_kernel.cu  indice.cu  indice_conv.cu  to_taichi.cu
sphconv/src/utils/: CMakeLists.txt  all.cpp
sphconv/taichi/: .gitignore  CMakeLists.txt  add.cu  backbone.cpp  backbone.h  backbone.py  conv.hpp  conv_config.h  copy.cpp  copy.h  export.cpp  kernel.h  mp.cpp  mp_helper.h  npy.hpp  points.h  points0.npy  points0.pt  program.cpp  program.h  test.cpp  test_array.cpp  test_backbone.cpp  test_copy.cpp  test_pads.cpp  torch_io.cu  utils.cpp  utils.h
sphconv/test/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  feature.cpp  indice_conv.cu  layout.cu  predicated_iterator.cu  regular_iterator.cu  simple.cpp  test_rules.py  test_util.py  test_utils.py  threadmap.cpp  threadmap.cu  threadmap_test.cu  tile_iterator.cu
sphconv/utils/: __init__.py  coord_transform.py  voxel_generator.py  voxelize.py
src/sphconv/: CMakeLists.txt  all.cpp  rule_conv.cu  rules.cu  tensor.cu  test_gemm.cu  to_dense.cu
src/utils/: CMakeLists.txt
test/: README.md  Untitled.ipynb  backbone.py  bench_conv.py  common.py  datagen.py  feature.cpp  test_conv.py  test_grad.py  test_module.py  test_rules.py  test_runtime.py  test_stable.py  test_subrules.py  test_util.py
